# backend/question-service/src/controllers/questionController.ts
@@ -196,19 +196,14 @@ export const readQuestionsList = async (
       };
     }
 
-    const filteredTotalQuestions = await Question.countDocuments(query);
-    if (filteredTotalQuestions == 0) {
-      res.status(404).json({ message: QN_NOT_FOUND_MESSAGE });
-      return;
-    }
-
+    const filteredQuestionCount = await Question.countDocuments(query);
     const filteredQuestions = await Question.find(query)
       .skip((pageInt - 1) * qnLimitInt)
       .limit(qnLimitInt);
 
     res.status(200).json({
       message: QN_RETRIEVED_MESSAGE,
-      totalQns: filteredTotalQuestions,
+      questionCount: filteredQuestionCount,
       questions: filteredQuestions.map(formatQuestionResponse),
     });
   } catch (error) {
@@ -239,14 +234,11 @@ export const readQuestionIndiv = async (
 };
 
 export const readCategories = async (
-  req: Request,
+  _req: Request,
   res: Response,
 ): Promise<void> => {
   try {
     const uniqueCats = await Question.distinct("category");
-    if (!uniqueCats || uniqueCats.length == 0) {
-      res.status(404).json({ message: CATEGORIES_NOT_FOUND_MESSAGE });
-    }
 
     res.status(200).json({
       message: CATEGORIES_RETRIEVED_MESSAGE,
