# backend/question-service/swagger.yml
@@ -176,7 +176,7 @@ paths:
                   message:
                     type: string
                     description: Message
-                  totalQns:
+                  questionCount:
                     type: integer
                     description: Total number of questions
                   questions:
@@ -185,12 +185,6 @@ paths:
                       $ref: "#/definitions/Question"
         400:
           description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/definitions/Error"
-        404:
-          description: Question Not Found
           content:
             application/json:
               schema:
@@ -290,7 +284,7 @@ paths:
           required: true
           description: Question id
       responses:
-        200: 
+        200:
           description: Successful Response
           content:
             application/json:
@@ -302,7 +296,7 @@ paths:
                     description: Message
                   question:
                     $ref: "#/definitions/Question"
-        404: 
+        404:
           description: Question Not Found
           content:
             application/json:
@@ -321,7 +315,7 @@ paths:
       summary: Returns question categories
       description: Returns list of unique question categories
       responses:
-        200: 
+        200:
           description: Successful Response
           content:
             application/json:
@@ -336,12 +330,6 @@ paths:
                     items:
                       type: string
                     description: Categories
-        404:
-          description: Categories Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/definitions/Error"
         500:
           description: Internal Server Error
           content:
